更新联系方式

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: NullaDev
-description: NullaDev Homepage
+description: NullaDev开发组
 logo: res/logo.jpg
 show_downloads: false
